Fixed a number of old /regex/ style smartlinks and broken smartlinks.
git-svn-id: http://svn.pugscode.org/pugs@14411 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -115,6 +115,7 @@ Liang-Qi "viirya" Xie                        謝良奇
 Lola Lee
 Luke "luqui" Palmer              (LPALMER)
 Mark "ninereasons" McConnell     (MISCHKE)
+Mark Grimes                      (MGRIMES)
 Mark Stosberg                    (MARKSTOS)
 Markus "malaire" Laire
 "mattc"
