--- a/AUTHORS
+++ b/AUTHORS
@@ -159,6 +159,7 @@ Sam "mugwump" Vilain             (SAMV)
 Samuel "SamB" Bronson
 Scott "flounder99" Fitzenrider
 Scott McWhirter                  (KUNGFUFTR)
+Sean O'Rourke                    (SEANO)
 Sebastian "sri" Riedel           (SRI)
 Shae "shapr" Matijs Erisson
 Shawn Sorichetti                 (SSORICHE)
