--- a/docs/Perl6/Overview/Data.pod
+++ b/docs/Perl6/Overview/Data.pod
@@ -93,13 +93,13 @@ Perl6::Overview::Data - Data Types
 
     (42)       # this is neither a list nor an array,
                 # but a scalar (the Num 42)
-    (42,)      # this is an one-element list
-    list 42    # this is an one-element list
+    (42,)      # this is a one-element list
+    list 42    # this is a one-element list
     (42,23)    # this is a two-element list
 
     []         # this is a zero-element array
-    [42]       # this is an one-element array
-    [42,]      # this is an one-element array
+    [42]       # this is a one-element array
+    [42,]      # this is a one-element array
     [42,23]    # this is a two-element array
 
 List construction (via the comma operator, &infix:<,>), does not create
