- adding myself (CJ)
git-svn-id: http://svn.pugscode.org/pugs@14437 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -50,6 +50,7 @@ Christopher "cpruden" Pruden
 chromatic                        (CHROMATIC)
 Colin Paul Adams
 Chuck "sproingie" Adams
+C.J. Adams-Collier               (CJ)
 Curtis "ovid" Poe                (OVID)
 Damian Conway                    (DCONWAY)
 Dan "broquaint" Brook            (BROQ)
